[ci skip] Display both residual and actual vs predicted 52fafc71670a0cbe1ac503f28c1c2281534c929e

--- a/_sources/content/notebooks/feature_engineering.ipynb
+++ b/_sources/content/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9e8de0b2",
+   "id": "c4d7ceb5",
    "metadata": {},
    "source": [
     "# Feature engineering for electricity load forecasting\n",
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7713b0e9",
+   "id": "10e4a612",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6dabfd9",
+   "id": "6fc3db4a",
    "metadata": {},
    "source": [
     "\n",
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e874388b",
+   "id": "07575957",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4fdde4ac",
+   "id": "454906f8",
    "metadata": {},
    "source": [
     "## Shared time range for all historical data sources\n",
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "827a357c",
+   "id": "6a04fa8c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e337e22",
+   "id": "5b286a0b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f63c456c",
+   "id": "c62177c2",
    "metadata": {},
    "source": [
     "\n",
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "edda843f",
+   "id": "1adc2d63",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be331b39",
+   "id": "dc23407f",
    "metadata": {},
    "source": [
     "\n",
@@ -200,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "479582f0",
+   "id": "0bb70293",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac435f0a",
+   "id": "38839de2",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -269,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ebd79325",
+   "id": "d63bdf1a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ddef30c",
+   "id": "4333b7e6",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -313,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8412850d",
+   "id": "4f08b86d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +357,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2eced4c4",
+   "id": "32ca0cda",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d42973d7",
+   "id": "e8dff88f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +381,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88eb4bb0",
+   "id": "32e9f2ea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f90279c",
+   "id": "689df5e7",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -412,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2552d41a",
+   "id": "7624ce60",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e32d417",
+   "id": "5f1538ea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "531dbaac",
+   "id": "6d24f513",
    "metadata": {},
    "source": [
     "## Investigating outliers in the lagged features\n",
@@ -479,7 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ebe1c0b",
+   "id": "42182a2a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5bbf6689",
+   "id": "de889ad9",
    "metadata": {},
    "source": [
     "\n",
@@ -501,7 +501,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e018032",
+   "id": "ad7cbe93",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e9d3024",
+   "id": "c9fe679a",
    "metadata": {},
    "source": [
     "\n",
@@ -524,7 +524,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ed3c0d4",
+   "id": "3e81626c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -548,7 +548,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ffb5760",
+   "id": "8969168d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "08b1672e",
+   "id": "2a0b5f70",
    "metadata": {},
    "source": [
     "\n",
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d23a097",
+   "id": "803a95af",
    "metadata": {},
    "source": [
     "## Final dataset\n",
@@ -605,7 +605,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85182e7e",
+   "id": "4d8ed706",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -638,7 +638,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd3ca25b",
+   "id": "cb3314be",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1b5595d",
+   "id": "14ddb7f9",
    "metadata": {},
    "source": [
     "\n",
@@ -707,7 +707,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f5c7be00",
+   "id": "9d2b0b95",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -739,7 +739,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "944ef0d0",
+   "id": "19bc944c",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -751,7 +751,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c498a8ea",
+   "id": "9c1c53b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -764,7 +764,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82f2f579",
+   "id": "cfee6375",
    "metadata": {},
    "source": [
     "\n",
@@ -781,7 +781,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b87ff49d",
+   "id": "c2455a3b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -829,7 +829,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c3d21cf6",
+   "id": "2ed8cdb9",
    "metadata": {},
    "source": [
     "\n",
@@ -844,7 +844,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7cca284",
+   "id": "819dd267",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -853,7 +853,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5248a8f0",
+   "id": "be7c9602",
    "metadata": {},
    "source": [
     "\n",
@@ -864,7 +864,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0819f84",
+   "id": "be498ca2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -874,7 +874,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68695f3a",
+   "id": "c6328079",
    "metadata": {},
    "source": [
     "\n",
@@ -885,7 +885,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "344f7cd3",
+   "id": "56e2b480",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -894,7 +894,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7ef85d5",
+   "id": "9a25ba16",
    "metadata": {},
    "source": [
     "\n",
@@ -911,7 +911,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d9283843",
+   "id": "8d255d21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -936,7 +936,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ccae1132",
+   "id": "747dd69c",
    "metadata": {},
    "source": [
     "\n",
@@ -954,7 +954,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52d9d6af",
+   "id": "95b8002e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -986,7 +986,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ef1acf7",
+   "id": "34846486",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1013,7 +1013,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ca1e67a",
+   "id": "708daee3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1050,7 +1050,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d88bddc",
+   "id": "04744f40",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1063,7 +1063,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d4445df1",
+   "id": "a518d30d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1205,7 +1205,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cab11305",
+   "id": "0b851a6d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1289,7 +1289,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b5879f70",
+   "id": "b0d848cf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1378,7 +1378,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "190c2338",
+   "id": "4f2ea2d6",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -1514,7 +1514,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0a27f62f",
+   "id": "371dd2d1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1526,7 +1526,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e1481ac",
+   "id": "54fb2d2c",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -1548,7 +1548,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41dd425d",
+   "id": "495c804c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1558,7 +1558,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33b94eef",
+   "id": "0790e1d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1568,7 +1568,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0d85940",
+   "id": "3bb79e84",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1589,7 +1589,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ed4bf3c",
+   "id": "61ea4f2d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1605,7 +1605,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed9c1aac",
+   "id": "edcfd17a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1631,7 +1631,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dae282dc",
+   "id": "ec947a0b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1657,7 +1657,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33783a62",
+   "id": "7137ead8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1677,7 +1677,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd8485d5",
+   "id": "5ada2c74",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1687,7 +1687,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "847d3bd4",
+   "id": "dac1f73f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1707,7 +1707,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b1b1f68f",
+   "id": "8cdb6c57",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1717,7 +1717,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e4a8a3f9",
+   "id": "aa412d42",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1729,7 +1729,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3cfb0471",
+   "id": "2ee3ca83",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1739,7 +1739,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0789d49f",
+   "id": "d3cb4434",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1751,7 +1751,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47b83576",
+   "id": "c1ac1f89",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1768,7 +1768,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6cb38b39",
+   "id": "adb43cf6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1784,7 +1784,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "096067cb",
+   "id": "8e7a53da",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1852,7 +1852,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32a133d4",
+   "id": "aaf2a4db",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1864,7 +1864,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3567796",
+   "id": "c28fea69",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1875,7 +1875,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16f02fa3",
+   "id": "d58f60bf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1911,7 +1911,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae391a88",
+   "id": "13d0a639",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1921,7 +1921,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ef82eb4",
+   "id": "64062f03",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1966,7 +1966,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0a03178",
+   "id": "0612ff66",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1982,7 +1982,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e515235",
+   "id": "275c8871",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1994,7 +1994,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f6561a7",
+   "id": "1be89657",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2006,7 +2006,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df8add2b",
+   "id": "e711570a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2017,7 +2017,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4635bb66",
+   "id": "f2c857e3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2033,7 +2033,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "267c4a4d",
+   "id": "8a25d0ad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2043,7 +2043,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48a29420",
+   "id": "6140665e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2088,7 +2088,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "335ca001",
+   "id": "cee1f271",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2106,7 +2106,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c6d0c61",
+   "id": "63b116c5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2130,7 +2130,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0e9ae69",
+   "id": "91a396e5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2157,7 +2157,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dcc6b8b4",
+   "id": "c692456c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2167,7 +2167,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3825c3ae",
+   "id": "0784a15f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2177,7 +2177,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "794c7dde",
+   "id": "13f3fc42",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2187,7 +2187,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4539412",
+   "id": "7d88aac8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2205,7 +2205,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce429cdb",
+   "id": "f381b438",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2234,45 +2234,46 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bf8b8cdc",
+   "id": "6804241b",
    "metadata": {},
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "from sklearn.metrics import PredictionErrorDisplay\n",
     "\n",
-    "fig, axs = plt.subplots(1, 3, figsize=(15, 5), sharey=True)\n",
     "\n",
-    "PredictionErrorDisplay.from_predictions(\n",
-    "    y_true=targets[\"load_mw_horizon_24h\"].skb.eval().to_numpy(),\n",
-    "    y_pred=predictions_gbrt_05[\"load_mw_horizon_24h\"].skb.eval().to_numpy(),\n",
-    "    kind=\"actual_vs_predicted\",\n",
-    "    ax=axs[0],\n",
-    ")\n",
-    "axs[0].set_title(\"0.05 Quantile\")\n",
+    "for kind in [\"actual_vs_predicted\", \"residual_vs_predicted\"]:\n",
+    "    fig, axs = plt.subplots(1, 3, figsize=(15, 5), sharey=True)\n",
     "\n",
-    "PredictionErrorDisplay.from_predictions(\n",
-    "    y_true=targets[\"load_mw_horizon_24h\"].skb.eval().to_numpy(),\n",
-    "    y_pred=predictions_gbrt_50[\"load_mw_horizon_24h\"].skb.eval().to_numpy(),\n",
-    "    kind=\"actual_vs_predicted\",\n",
-    "    ax=axs[1],\n",
-    ")\n",
-    "axs[1].set_title(\"Median\")\n",
+    "    PredictionErrorDisplay.from_predictions(\n",
+    "        y_true=targets[\"load_mw_horizon_24h\"].skb.eval().to_numpy(),\n",
+    "        y_pred=predictions_gbrt_05[\"load_mw_horizon_24h\"].skb.eval().to_numpy(),\n",
+    "        kind=kind,\n",
+    "        ax=axs[0],\n",
+    "    )\n",
+    "    axs[0].set_title(\"0.05 quantile regression\")\n",
     "\n",
-    "PredictionErrorDisplay.from_predictions(\n",
-    "    y_true=targets[\"load_mw_horizon_24h\"].skb.eval().to_numpy(),\n",
-    "    y_pred=predictions_gbrt_95[\"load_mw_horizon_24h\"].skb.eval().to_numpy(),\n",
-    "    kind=\"actual_vs_predicted\",\n",
-    "    ax=axs[2],\n",
-    ")\n",
-    "axs[2].set_title(\"0.95 Quantile\")\n",
-    "_ = fig.suptitle(\"GBRT Predictions for different quantiles\")"
+    "    PredictionErrorDisplay.from_predictions(\n",
+    "        y_true=targets[\"load_mw_horizon_24h\"].skb.eval().to_numpy(),\n",
+    "        y_pred=predictions_gbrt_50[\"load_mw_horizon_24h\"].skb.eval().to_numpy(),\n",
+    "        kind=kind,\n",
+    "        ax=axs[1],\n",
+    "    )\n",
+    "    axs[1].set_title(\"Median regression\")\n",
+    "\n",
+    "    PredictionErrorDisplay.from_predictions(\n",
+    "        y_true=targets[\"load_mw_horizon_24h\"].skb.eval().to_numpy(),\n",
+    "        y_pred=predictions_gbrt_95[\"load_mw_horizon_24h\"].skb.eval().to_numpy(),\n",
+    "        kind=kind,\n",
+    "        ax=axs[2],\n",
+    "    )\n",
+    "    axs[2].set_title(\"0.95 quantile regression\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71ff8633",
+   "id": "d84a8942",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2295,7 +2296,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ade03af",
+   "id": "d72b2135",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2309,7 +2310,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3f2aef3f",
+   "id": "04d498a7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2323,7 +2324,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bbb50f4a",
+   "id": "3d90270a",
    "metadata": {},
    "outputs": [],
    "source": []
